After the videos

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 Week_00_--_Review_of_PHP_and_Stuff/phpReview/.vscode/sftp.json
+Week_00_--_Review_of_PHP_and_Stuff/.vscode/sftp.json
+Week_00_--_Review_of_PHP_and_Stuff/phpReview/examples/.vscode/sftp.json
